<resources>
    <string name="app_name">번개장터 클론</string>

    <!-- Naming Rules -->
    <!-- 도메인명_컴포넌트함축어_용도(=목적) -->

    <!-- Common -->

    <!-- Main -->
    <string name="main_btm_nav_home_title">홈</string>
    <string name="main_btm_nav_search_title">검색</string>
    <string name="main_btm_nav_add_title">등록</string>
    <string name="main_btm_nav_bungaetalk_title">번개톡</string>
    <string name="main_btm_nav_my_page_title">MY</string>

    <!-- Home -->
    <string name="home_btn_try_get_http_method">GET API 보내기</string>
    <string name="home_btn_try_post_http_method">POST API 보내기</string>
    <string name="home_et_id">아이디를 입력하세요.</string>
    <string name="home_et_pw">비밀번호를 입력하세요.</string>

    <string name="home_tv_fourteen_01">번개케어</string>
    <string name="home_tv_fourteen_02">찜</string>
    <string name="home_tv_fourteen_03">최근본상품</string>
    <string name="home_tv_fourteen_04">내피드</string>
    <string name="home_tv_fourteen_05">내폰시세</string>
    <string name="home_tv_fourteen_06">우리동네</string>
    <string name="home_tv_fourteen_07">전체메뉴</string>
    <string name="home_tv_fourteen_08">나이키</string>
    <string name="home_tv_fourteen_09">스니커즈</string>
    <string name="home_tv_fourteen_10">팔로잉브랜드</string>
    <string name="home_tv_fourteen_11">비즈빔</string>
    <string name="home_tv_fourteen_12">아더에러</string>
    <string name="home_tv_fourteen_13">블라인드..</string>
    <string name="home_tv_fourteen_14">포인트모으기</string>

<!--    pay-->
    <string name="pay_register"><u>등록</u></string>
    <string name="pay_paybtn_1">개인정보 제 3자 제공동의와 결제대행 서비스 이용약관에 동의합니다.</string>
    <string name="pay_paybtn_2"><u>자세히 보기</u></string>
    <string name="pay_paybtn_3">번개장터(주)는 통신판매중개자이며, 통신판매의 당사자가 아닙니다.\n전자상거래 등에서의 소비자보호에 관한 법률 등 관련 법령 및 번개장터(주)의 약관에 따라 상품, 상품정보, 거래에 관한 책임은 개별 판매자에게 귀속하고, 번개장터(주)는 원칙적으로 회원간 거래에 대하여 책임을 지지 않습니다. 다만, 번개장터(주)가 직접 판매하는 상품에 대한 책임은 번개장터(주)에게 귀속합니다.</string>

    <!-- MyPage -->
    <string name="my_page_sogae_pyunjip"><u>상점 소개 편집</u></string>
    <string name="my_page_nickname">상점9999호</string>
    <string name="my_page_on_login">접속중</string>
    <string name="bonus_head1">이벤트</string>
    <string name="bonus_head2">이벤트</string>
    <string name="bonus_head3">혜택</string>
    <string name="bonus_body1">GS25 편의점 택배 200원 무제한 할인</string>
    <string name="bonus_body2">10000p가 도착하는 간편결제 이벤트</string>
    <string name="bonus_body3">최대 12월 할부 무이자 카드 혜택</string>
    <string name="panmae_ilgwal"><u>일괄편집</u></string>

    <!--    add-->
    <string name="add_tag">\u0023 태그</string>
    <string name="add_price">가격</string>
    <string name="add_won">\u20A9 </string>
    <string name="add_explanation">- 구매시기\n- 브랜드/모델명\n- 제품의 상태(사용감, 하자 유무 등)\n* 서로가 믿고 거래할 수 있도록, 자세한 정보와 다양한각도의 상품 사진을 올려주세요. \n\n안전하고 건전한 거래 환경을 위해 과학기술정보통신부, 한국인터넷진흥원과 번개장터(주)가 함께합니다.</string>
    <string name="add_safepay">빠르게 팔고 싶으면 안전결제 환영을 이용하세요!</string>
    <string name="add_safepay_details"><u>자세히</u></string>
    <string name="add_hashtag">\u0023</string>
    <string name="add_tag_hint">-내 상품을 다양한 태그로 표현해 보세요.\n-사람들이 내 상품을 더 잘 찾을 수 있어요.\n-상품과 관련 없는 태그를 입력할 경우, 판매에 제재를 받을 수 있어요.</string>
    <string name="add_tag_search_hint">태그를 입력해주세요(최대 3개)</string>


    <!--    login-->
    <string name="login_kakaotalk">카카오톡으로 시작하기</string>
    <string name="login_other">다른 방법으로 로그인</string>
    <string name="login_facebook">페이스북으로 시작하기</string>
    <string name="login_naver">네이버로 시작하기</string>
    <string name="login_phone">본인인증으로 로그인</string>
    <string name="phone_number">휴대폰번호</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_get_token">LoginGetTokenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>