<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_btm_nav_home"
        android:icon="@drawable/ic_action_my"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_home_title" />
    <item
        android:id="@+id/menu_main_btm_nav_search"
        android:icon="@drawable/ic_action_my"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_search_title" />
    <item
        android:id="@+id/menu_main_btm_nav_add"
        android:icon="@drawable/ic_action_my"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_add_title" />
    <item
        android:id="@+id/menu_main_btm_nav_bungaetalk"
        android:icon="@drawable/ic_action_my"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_bungaetalk_title" />
    <item
        android:id="@+id/menu_main_btm_nav_my_page"
        android:icon="@drawable/ic_action_my"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_my_page_title" />

</menu>
